# telepredict

./: .env.example  .gitignore  .pre-commit-config.yaml  APPRUNNER_TROUBLESHOOTING.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Deploy-ToGitHub.ps1  Dockerfile  GITHUB_DEPLOYMENT.md  LICENSE  Makefile  PROJECT_TEST_RESULTS.md  README.md  REMOTE_TESTING_GUIDE.md  apprunner-basic.yaml  apprunner.yaml  deploy-apprunner.sh  deploy_to_github.bat  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_all_tests.py  test_apprunner_setup.py  test_basic.py  test_cli_minimal.py  test_project.py  test_results.json
.apprunner/: apprunner.yaml
.github/workflows/: comprehensive-test.yml
infrastructure/: DEPLOYMENT.md  README.md  TEST_RESULTS.md  deploy.bat  infrastructure.yaml  test-infrastructure.ps1  test-simple.ps1
infrastructure/parameters/: dev.json  prod.json  staging.json
infrastructure/scripts/: deploy.sh  destroy.sh  status.sh
monitoring/: prometheus.yml
nginx/: nginx.conf
remote_testing/: Dockerfile.test  README.md  deploy_test_environment.sh  ec2_test_script.sh  full_test_suite.py
scripts/: mongo-init.js
src/sports_prediction/: __init__.py  __main__.py  web_server.py
src/sports_prediction/cli/: __init__.py  main.py
src/sports_prediction/config/: __init__.py  settings.py
src/sports_prediction/data_collection/: __init__.py  base_collector.py  data_manager.py  espn_collector.py  odds_collector.py  sportradar_collector.py  web_scraper.py
src/sports_prediction/ml_models/: __init__.py  base_model.py  ensemble.py  feature_engineering.py  lightgbm_model.py  meta_learner.py  pytorch_models.py  sklearn_models.py  tensorflow_models.py  xgboost_model.py
src/sports_prediction/prediction_engine/: __init__.py  analysis.py  odds_analyzer.py  predictor.py
src/sports_prediction/telegram_bot/: __init__.py  bot.py  formatters.py  handlers.py  user_manager.py
src/sports_prediction/utils/: __init__.py  cache.py  logger.py  rate_limiter.py
